--- a/index.html
+++ b/index.html
@@ -5,9 +5,63 @@
     <meta charset="UTF-8"> <!-- config de lenguaje -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- responsivo -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsivo -->
-    <title>Document</title> <!-- titulo de la ventana del navegador -->
+    <title>HOME</title> <!-- titulo de la ventana del navegador -->
 </head>
 <body> <!-- cuerpo de la pag web -->
-    
+    <header>
+        <h2>Header de la pag</h2>
+    </header>
+    <nav>
+        <h2>Nav de la pag</h2>
+    <ul>
+        <li>
+            <a href="./index.html">HOME</a>
+        </li>
+        <li>
+            <a href="/clase02-html/pages/sucursales.html">SUCURSALES</a>
+        </li>
+        <li>
+            <a href="/clase02-html/pages/productos.html">PRODUCTOS</a>
+        </li>
+    </ul>
+    </nav>
+
+    <main>
+
+        <h1>
+            Etiqueta de Titulo Nivel 1
+        </h1>
+
+        <hr>
+
+        <section>
+            <article>
+                <h3> Messi Chikito</h3>
+                <img src="https://www.descargarstickers.com/publico/static/src_img/2020/05/566827.png" alt="Messi chikito">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium maxime ipsum, modi nemo porro voluptate est iure recusandae eos facere autem optio adipisci, velit consequatur quam, ut earum saepe maiores.</p>
+            </article>
+            <article>
+                <h3>Mesi</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam vel corporis nobis unde illo, fuga veniam quae, odit fugit sint quaerat? Enim, tempore. Consequuntur, dicta quisquam vitae impedit expedita accusamus.</p>
+            </article>
+            <article>
+                <h3>m10 chikito</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi saepe eaque vel unde labore aspernatur libero quaerat, dignissimos sint iste soluta iure eum quam temporibus est sapiente quia molestias magnam.</p>
+            </article>
+        </section>
+
+
+
+        <ol>
+            <li>Peras</li>
+            <li>Manzanas</li>
+            <li>Bananas</li>
+        </ol>
+
+    </main>
+        
+    <footer>
+        <h2>Footer de la pag</h2>
+    </footer>
 </body>
 </html>
