Fin de clase HTML

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </article>
             <article>
                 <h3>Mesi</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam vel corporis nobis unde illo, fuga veniam quae, odit fugit sint quaerat? Enim, tempore. Consequuntur, dicta quisquam vitae impedit expedita accusamus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam vel corporis nobis unde illo, fuga <strong><i><a href="./pages/productos.html#miFormulario">Formulario</a></i></strong> veniam quae, odit fugit sint quaerat? Enim, tempore. Consequuntur, dicta quisquam vitae impedit expedita accusamus.</p>
             </article>
             <article>
                 <h3>m10 chikito</h3>
