--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,9 +7,7 @@
     <title>PRODUCTOS</title>
 </head>
 <body>
-    <h1>
-        Soy Productos
-    </h1>
+    
 
     <nav>
         <h2>Nav de la pag</h2>
@@ -25,5 +23,59 @@
         </li>
     </ul>
     </nav>
+
+    <main>
+        <h1>
+            Soy Productos
+        </h1>
+
+        <form id="miFormulario" method="get"> <!-- o usar method="post"para que no se vean los datos enviados-->
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="nombre" minlength="3" maxlength="10" required>
+            <br>
+            <label for="edad">Edad:</label>
+            <input type="number" id="edad" name="edad">
+            <br>
+            <label for="nacimiento">Fecha de nacimiento:</label>
+            <input type="date" id="nacimiento" name="nacimiento">
+            <br>
+            <label for="password">Password:</label>
+            <input type="password" minlength="8" maxlength="12" id="password" name="password" required>
+            <br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" placeholder="pepe@gmail.com" required>
+            <br>
+            <label for="genero">Genero:</label>
+            <br>
+            <label for="masculino">Masculino:</label>
+            <input type="radio" value="Masculino">
+            <br>
+            <label for="femenino">Femenino:</label>
+            <input type="radio" value="Femenino">
+            <br>
+            <label for="otros">Otro:</label>
+            <input type="checkbox">
+            <br>
+            <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Escribe aqui"></textarea>
+            <br>
+            <input type="button" id="ejemplo" value="Enviar datos">
+            <br>
+            <button type="submit">Sos un Boton y envio datos</button>
+        </form>
+        
+    </main>
+<hr>
+    <footer>
+        <address>
+            Felix Ballester 666
+        </address>
+
+        <p>
+            <a href="mailto:ventas@gmail.com">ventas@gmail.com</a>   <!--esto es para que vaya directamente a mandar el mail-->
+        </p>
+        <p>
+            <a href="tel:1526300333">1526300333</a> <!--lo mismo pero para telefonos-->
+        </p>
+    </footer>
 </body>
 </html>
