Viernes de Tutoria!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8"> <!-- config de lenguaje -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- responsivo -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsivo -->
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <title>HOME</title> <!-- titulo de la ventana del navegador -->
 </head>
 <body> <!-- cuerpo de la pag web -->
