--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- responsivo -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsivo -->
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/clase02-html/css/index.css">
+
+    <style>
+        p{
+            color: blue;
+        }
+    </style>
+
+
     <title>HOME</title> <!-- titulo de la ventana del navegador -->
 </head>
 <body> <!-- cuerpo de la pag web -->
     <header>
-        <h2>Header de la pag</h2>
+        <h2 class="centrar">Header de la pag</h2>
     </header>
     <nav>
-        <h2>Nav de la pag</h2>
-    <ul>
+        <h2 class="soloYo">Nav de la pag</h2>
+    <ul class="centrar">
         <li>
             <a href="./index.html">HOME</a>
         </li>
@@ -29,7 +38,7 @@
 
     <main>
 
-        <h1>
+        <h1 style="color: green; font-size: 60px;">
             Etiqueta de Titulo Nivel 1
         </h1>
 
@@ -39,11 +48,11 @@
             <article>
                 <h3> Messi Chikito</h3>
                 <img src="https://www.descargarstickers.com/publico/static/src_img/2020/05/566827.png" alt="Messi chikito">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium maxime ipsum, modi nemo porro voluptate est iure recusandae eos facere autem optio adipisci, velit consequatur quam, ut earum saepe maiores.</p>
+                <p id="miParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium maxime ipsum, modi nemo porro voluptate est iure recusandae eos facere autem optio adipisci, velit consequatur quam, ut earum saepe maiores.</p>
             </article>
-            <article>
+            <article class="soloYo">
                 <h3>Mesi</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam vel corporis nobis unde illo, fuga <strong><i><a href="./pages/productos.html#miFormulario">Formulario</a></i></strong> veniam quae, odit fugit sint quaerat? Enim, tempore. Consequuntur, dicta quisquam vitae impedit expedita accusamus.</p>
+                <p class="otroParrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam vel corporis nobis unde illo, fuga <strong><i><a href="./pages/productos.html#miFormulario">Formulario</a></i></strong> veniam quae, odit fugit sint quaerat? Enim, tempore. Consequuntur, dicta quisquam vitae impedit expedita accusamus.</p>
             </article>
             <article>
                 <h3>m10 chikito</h3>
