--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -26,5 +26,21 @@
         </li>
     </ul>
     </nav>
+
+    <hr>
+
+    <table>
+        <thead>Datos del Censo 2022</thead>
+        <tbody>
+            <tr></tr>
+
+
+
+        </tbody>
+    </table>
+
+    <hr>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bOZWBTyHaQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
